--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-source-file .tmuxline.conf
+source-file ~/.tmux/.tmuxline.conf
 set -g mode-keys vi
 #switch panels
 bind k selectp -U # switch to panel Up
