--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,12 @@
 source-file ~/.tmux/.tmuxline.conf
 set -g mode-keys vi
 #switch panels
-bind k selectp -U # switch to panel Up
-bind j selectp -D # switch to panel Down
-bind h selectp -L # switch to panel Left
-bind l selectp -R # switch to panel Right
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # List of plugins
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 #automatic restore tmux
