--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set-option -g @pane_resize "10"
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
