--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,14 +3,16 @@ unbind C-b
 set -g prefix C-a
 bind a send-prefix
 
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
+#set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g history-file ~/.tmux_history
-setw -g aggressive-resize on
+#setw -g aggressive-resize on
 set -g mode-keys vi
 #switch panels
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded."
+
+bind-key M-q select-layout even-horizontal
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-pain-control'
