This is fast push

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,11 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded."
 
 bind-key M-q select-layout even-horizontal
 
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+## Default terminal is 256 colors
+set -g default-terminal "screen-256color"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set-option -g @pane_resize "10"
