This is fast push

--- a/tmuxpowerline.conf
+++ b/tmuxpowerline.conf
@@ -1,4 +1,4 @@
-#run-shell "powerline-daemon -q"
+run-shell "powerline-daemon -q"
 if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
 #source "/Users/soulomoon/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf"
 set-option -g status on
