--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ set -g default-terminal "screen-256color"
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set-option -g @pane_resize "10"
-set -g @plugin 'tmux-plugins/tmux-sidebar'
+#set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 #automatic restore tmux
