--- a/.tmuxline.conf
+++ b/.tmuxline.conf
@@ -1,27 +1,28 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Sun, 30 Jul 2017
+# on Wed, 14 Nov 2018
 
 set -g status-justify "left"
 set -g status "on"
 set -g status-attr "none"
-set -g message-command-bg "colour11"
+set -g message-command-bg "#3E4452"
 set -g status-left-length "100"
-set -g pane-active-border-fg "colour14"
-set -g status-bg "colour0"
-set -g message-command-fg "colour7"
-set -g pane-border-fg "colour11"
-set -g message-bg "colour11"
+set -g pane-active-border-fg "#98C379"
+set -g status-bg "#282C34"
+set -g message-command-fg "#ABB2BF"
+set -g pane-border-fg "#3E4452"
+set -g message-bg "#3E4452"
 set -g status-left-attr "none"
 set -g status-right-attr "none"
 set -g status-right-length "100"
-set -g message-fg "colour7"
-setw -g window-status-fg "colour10"
+set -g message-fg "#ABB2BF"
+setw -g window-status-fg "#98C379"
 setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour0"
+setw -g window-status-activity-bg "#282C34"
 setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour14"
+setw -g window-status-activity-fg "#98C379"
 setw -g window-status-separator ""
-setw -g window-status-bg "colour0"
-set -g status-left "#[fg=colour15,bg=colour14,bold] #S #[fg=colour14,bg=colour0,nobold,nounderscore,noitalics]"
-setw -g window-status-format "#[fg=colour10,bg=colour0] #I #[fg=colour10,bg=colour0] #W "
-setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #I #[fg=colour7,bg=colour11] #W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
+setw -g window-status-bg "#282C34"
+set -g status-left "#[fg=#282C34,bg=#98C379] #S #[fg=#98C379,bg=#282C34,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#3E4452,bg=#282C34,nobold,nounderscore,noitalics]#[fg=#ABB2BF,bg=#3E4452] %Y-%m-%d  %H:%M #[fg=#98C379,bg=#3E4452,nobold,nounderscore,noitalics]#[fg=#282C34,bg=#98C379] #h "
+setw -g window-status-format "#[fg=#98C379,bg=#282C34] #I #[fg=#98C379,bg=#282C34] #W "
+setw -g window-status-current-format "#[fg=#282C34,bg=#3E4452,nobold,nounderscore,noitalics]#[fg=#ABB2BF,bg=#3E4452] #I #[fg=#ABB2BF,bg=#3E4452] #W #[fg=#3E4452,bg=#282C34,nobold,nounderscore,noitalics]"
