--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 source-file ~/.tmux/.tmuxline.conf
+
 unbind C-b
 set -g prefix C-a
 bind a send-prefix
@@ -25,6 +26,7 @@ set-option -g @pane_resize "10"
 #set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'andrewjstryker/tmux-airline'
 #automatic restore tmux
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
