--- a/.tmuxline.conf
+++ b/.tmuxline.conf
@@ -1,28 +1,21 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Wed, 14 Nov 2018
+# on Sat, 30 Oct 2021
 
 set -g status-justify "left"
 set -g status "on"
-set -g status-attr "none"
-set -g message-command-bg "#3E4452"
-set -g status-left-length "100"
-set -g pane-active-border-fg "#98C379"
-set -g status-bg "#282C34"
-set -g message-command-fg "#ABB2BF"
-set -g pane-border-fg "#3E4452"
-set -g message-bg "#3E4452"
-set -g status-left-attr "none"
-set -g status-right-attr "none"
+set -g status-left-style "none"
+set -g message-command-style "fg=colour145,bg=colour236"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=colour114"
+set -g status-style "none,bg=colour236"
+set -g message-style "fg=colour145,bg=colour236"
+set -g pane-border-style "fg=colour236"
 set -g status-right-length "100"
-set -g message-fg "#ABB2BF"
-setw -g window-status-fg "#98C379"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "#282C34"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "#98C379"
+set -g status-left-length "100"
+setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
-setw -g window-status-bg "#282C34"
-set -g status-left "#[fg=#282C34,bg=#98C379] #S #[fg=#98C379,bg=#282C34,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#3E4452,bg=#282C34,nobold,nounderscore,noitalics]#[fg=#ABB2BF,bg=#3E4452] %Y-%m-%d  %H:%M #[fg=#98C379,bg=#3E4452,nobold,nounderscore,noitalics]#[fg=#282C34,bg=#98C379] #h "
-setw -g window-status-format "#[fg=#98C379,bg=#282C34] #I #[fg=#98C379,bg=#282C34] #W "
-setw -g window-status-current-format "#[fg=#282C34,bg=#3E4452,nobold,nounderscore,noitalics]#[fg=#ABB2BF,bg=#3E4452] #I #[fg=#ABB2BF,bg=#3E4452] #W #[fg=#3E4452,bg=#282C34,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=colour114,bg=colour236"
+set -g status-left "#[fg=colour235,bg=colour114] #S #[fg=colour114,bg=colour236,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour236,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour145,bg=colour236] %Y-%m-%d  %H:%M #[fg=colour114,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour114] #h "
+setw -g window-status-format "#[fg=colour114,bg=colour236] #I #[fg=colour114,bg=colour236] #W "
+setw -g window-status-current-format "#[fg=colour236,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour145,bg=colour236] #I #[fg=colour145,bg=colour236] #W #[fg=colour236,bg=colour236,nobold,nounderscore,noitalics]"
